@@ -6,6 +6,8 @@
 4. Reduce CPU load by removing some CSS animations - don't pulse library
    refresh status, don't pulse playing but muted volume, and use outlined pause
    icon to indicate waiting to play.
+5. Fix custom actions for playlists.
+6. Add PLAYLISTID and PLAYLISTNAME to custom action variables.
 
 5.8.1
 -----
